--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,13 @@
-<h1>Hello, Rails!</h1>
-<%= link_to "My Blog", posts_path %>
+
+
+
+<div align="center">
+
+<div class="well">
+  
+  Nothing here.  To be constructed.
+
+</div>
+
+
+</div>
