--- a/app/views/shows/index.html.erb
+++ b/app/views/shows/index.html.erb
@@ -13,6 +13,7 @@
   <tr>
     <td><%= show.name %></td>
     <td><%= show.code %></td>
+    <td><%= link_to 'Run', run_show_path(show) %></td>
     <td><%= link_to 'Show', show %></td>
     <td><%= link_to 'Edit', edit_show_path(show) %></td>
     <td><%= link_to 'Destroy', show, method: :delete, data: { confirm: 'Are you sure?' } %></td>
