fix httpauth of 'run' instead of 'show'

--- a/app/views/shows/show.html.erb
+++ b/app/views/shows/show.html.erb
@@ -1,5 +1,8 @@
 <p id="notice"><%= notice %></p>
 
+<%= link_to 'Edit', edit_show_path(@show) %> |
+<%= link_to 'Back', shows_path %>
+
 <p>
   <b>Name:</b>
   <%= @show.name %>
@@ -11,7 +14,6 @@
     <%= @show.code %>
   </pre>
 </p>
-
 
 <%= link_to 'Edit', edit_show_path(@show) %> |
 <%= link_to 'Back', shows_path %>
