--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,3 +11,27 @@
  *= require_self
  *= require_tree .
  */
+
+body {
+    background-color: #4b7299;
+}
+
+#user_nav {
+    float: right; 
+
+}
+.container {
+    margin: 5em auto;
+    padding: 2em;
+    width: 900px;
+    height: 500px;
+    border: 2px solid black;
+    background-color: white;
+}
+
+
+.center {
+    text-align : center;
+}
+
+
