--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,13 +1,8 @@
 
 
 
-<div align="center">
-
-<div class="well">
-  
-  Nothing here.  To be constructed.
-
-</div>
-
-
+<div class="center">
+  <div class="well">
+    Nothing here.  To be constructed.
+  </div>
 </div>
