add shows model, test with mercury and wd-rails

--- a/app/views/shows/_form.html.erb
+++ b/app/views/shows/_form.html.erb
@@ -16,8 +16,14 @@
     <%= f.text_field :name %>
   </div>
   <div class="field">
-    <%= f.label :code %><br />
-    <%= f.text_area :code %>
+    <%= f.label :description %><br />
+    <div class="row-fluid">
+      <p id="wmd-preview" class="span6 preview"></p>
+      <div class="span6 editor">
+      <div id="wmd-button-bar"></div>
+      <%= f.text_area :description, 'id'=>'wmd-input' %>
+      </div>
+    </div>
   </div>
   <div class="actions">
     <%= f.submit %>
