--- a/app/assets/stylesheets/shows.css.scss
+++ b/app/assets/stylesheets/shows.css.scss
@@ -1,3 +1,10 @@
 // Place all the styles related to the shows controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+//=require 'wmd/wmd'
+
+
+#wmd-input {
+    width: 100%;
+}
