* use ueditor as the show's description editor , finally, got a editor.. * hand craft a ueditor-rails package to assist ueditor assets, and use it instead of davilu 's (broken fiesl)

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,8 +2,8 @@
 <html>
 <head>
   <title>Blog</title>
-  <%= stylesheet_link_tag    "application", :media => "all" %>
-  <%= javascript_include_tag "application" %>
+  <%= find_and_include_asset "application" %>
+  <%= find_and_include_asset(params[:controller]) if params[:controller] %>
   <%= csrf_meta_tags %>
   <%= yield (:head) %>
 </head>
