--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,15 +1,11 @@
-  <p>
-    <b>Commenter:</b>
-    <%= comment.commenter %>
-  </p>
- 
-  <p>
-    <b>Comment:</b>
-    <%= comment.body %>
-  </p>
 
-  <p>
+<div class="comment">
+
+  <h3><%= comment.commenter %>:</h3>
+    <blockquote>
+      <%= comment.body %>
+    </blockquote>
     <%= link_to 'Destroy Comment', [comment.post,  comment], :confirm=> 'Are you sure?', :method =>:delete %>
   </p>
-
+</div>
 
