--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -11,7 +11,7 @@
     </div>
   <% end %>
 
-  <div class="field">
+  <div class="field hidden">
     <%= f.label :name %><br />
     <%= f.text_field :name %>
   </div>
@@ -21,7 +21,10 @@
   </div>
   <div class="field">
     <%= f.label :content %><br />
-    <%= f.text_area :content %>
+    <%= f.text_area :content, 'id'=>'content_editor' %>
+    <script type="text/javascript">
+      UE.getEditor("content_editor", { emotionLocalization:true, iframeUrlMap: true, initialFrameHeight:600});
+    </script>
   </div>
   <div class="actions">
     <%= f.submit %>
