--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing post</h1>
-
-<%= render 'form' %>
-
+<!--<h1>Editing post</h1>-->
+<div class="post edit">
+  <%= render 'form' %>
+</div>
 <%= link_to 'Show', @post %> |
 <%= link_to 'Back', posts_path %>
