--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -20,6 +20,10 @@
     <%= f.text_field :title %>
   </div>
   <div class="field">
+    <%= f.label :tag_list %><br />
+    <%= f.text_field :tag_list %>
+  </div>
+  <div class="field">
     <%= f.label :content %><br />
     <%= f.text_area :content, 'id'=>'content_editor' %>
     <script type="text/javascript">
