--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -5,6 +5,9 @@
       <span class="title"><%= link_to post.title, post %></span>
       <%= link_to 'Edit', edit_post_path(post) %>
     </p>
+    <p class="tag">
+      <%= post.tag_list %>
+    </p>
     <p class="body" >
       <%= raw post.content %>
     </p>
