--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -4,6 +4,9 @@
   <div class="post-content">
     <h1 class="hidden"><%= @post.name %></h1>
     <h1 class="title"><%= link_to @post.title, @post %></h1>
+  <p class="tag">
+      <%= @post.tag_list %>
+    </p>
     <p class="body" >
       <%= raw @post.content %>
     </p>
