--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -9,6 +9,8 @@
  * compiled file, but it's generally better to create a new file per style scope.
  *
  *= require_self
-  = require  scaffolds_new
- require bootstrap_and_overrides
+//= require  scaffolds_new
+//= require jquery.tagsinput
+//require bootstrap_and_overrides
+
  */
