--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,9 +19,10 @@
 
     <div id="content" class="inner">
 
-      <div class="sidebar" style="background-color:white; height: 500px;">
-        <div class="widget tags"></div>
-        <div class="widget tweets"></div>
+      <div class="sidebar">
+        <%= render 'posts/tags' %>
+      <%= render 'posts/tags' %>
+  
       </div>
 
       <div  class="main-col pull-left">
