--- a/app/assets/stylesheets/posts.css.css
+++ b/app/assets/stylesheets/posts.css.css
@@ -2,6 +2,8 @@
   background-color: white;
   -webkit-box-shadow: 1px 2px 3px #ddd;
   box-shadow: 1px 2px 3px #ddd;
+  padding: 2em 0em 4em;
+  margin-bottom: 2em;
 }
 .post label {
   display: none;
@@ -16,19 +18,37 @@
   font-size: 2em;
 }
 .post .post-content {
-  padding: 20px 20px 15px 77px;
-  margin-bottom: 30px;
+  padding: 20px 30px 15px 50px;
 }
 .post .post-content .head {
   margin-bottom: 1em;
 }
-.post .post-content .head .title {
+.post .post-content .title {
   display: inline;
   font-size: 2em;
   font-weight: bold;
-}
-.post .post-content .head a {
   text-decoration: none;
+}
+.post .post-content .title a {
+  text-decoration: none;
+}
+.post .post-content .tags {
+  border-top: 1px solid #eee;
+  padding-top: 1em;
+}
+.post .post-content .tags .tag {
+  border: 1px solid #A5D24A;
+  -moz-border-radius: 2px;
+  -webkit-border-radius: 2px;
+  padding: 1px;
+  margin: 0em 2px;
+  text-decoration: none;
+  background: #CDE69C;
+  color: #638421;
+}
+.post .post-content p {
+  margin-top: 1em;
+  margin-bottom: 1em;
 }
 
 .comments {
@@ -45,4 +65,16 @@
 }
 .comments .comment blockquote {
   margin-left: 1em;
+}
+
+.sidebar .tags {
+  padding: 1em;
+}
+.sidebar .tags .title {
+  border-bottom: 1px solid #eeeeee;
+}
+.sidebar .tags ul {
+  list-style-type: none;
+  margin: 1em 0em;
+  padding-left: 1em;
 }
