--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
   <body>
     <div id="header" class="header inner">
       <h1>Road Tang's Site</h1>
-      <p class="nav alignright">
+      <p class="nav">
         <%= link_to "Home",  root_path %> 
         <%= link_to "GitHub", "https://github.com/roadt"%>
       </p>
