1, desin devise to single column page layout,     2, fullfill the stylehseet     3, add login box/link to show status of login. and can login logout

--- a/app/assets/stylesheets/scaffolds_new.css.css
+++ b/app/assets/stylesheets/scaffolds_new.css.css
@@ -69,7 +69,8 @@ a {
 }
 
 .center {
-  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .alignleft {
@@ -96,6 +97,8 @@ a {
 
 .flash {
   background-color: white;
+  margin-bottom: 30px;
+  padding: 1em 2em;
 }
 
 /* responsive  two column layout */
