--- a/app/assets/stylesheets/scaffolds_new.css.scss
+++ b/app/assets/stylesheets/scaffolds_new.css.scss
@@ -84,7 +84,8 @@ a {
 }
 
 .center {
-    text-align : center;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .alignleft {
@@ -108,6 +109,8 @@ a {
 
 .flash { 
     background-color:white;
+    margin-bottom: 30px;
+    padding:1em 2em ;
 }
 
 /* responsive  two column layout */
