1, add roles to user and related migration. the id=1 is site owner, all sign user are commenter. no editor originally. site owner need set role manually.  guest(default role) can reader. 2, remove all http authentication, and authorize all controller 's action using cancan 3, change view to show the related link (e.g. Show, Edit) only when user has privilege.

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -7,15 +7,23 @@
   
   <%= render @post.comments %>
 
-
+  <% if can? :create, Comment %>
   <div class="add">
     <h2>Add a comment:</h2>
     <%= render "comments/form" %>
   </div>
+  <% else %>
+  <h2 class="center">
+  <%= link_to 'Login to comment', new_user_session_path %>
+  </h2>
+  <% end %>
 </div>
 
 <br />
 
-<%= link_to 'Edit', edit_post_path(@post) %> |
-<%= link_to 'Back', posts_path %>
+<% links = []
+links << link_to('Edit', edit_post_path(@post)) if can?(:edit, @post)
+links << link_to('Back', posts_path)
+%>
+<%= raw links.join(' | ') %>
 
