--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -2,5 +2,5 @@
 <div class="post edit">
   <%= render 'form' %>
 </div>
-<%= link_to 'Show', @post %> |
-<%= link_to 'Back', posts_path %>
+[<%= link_to 'Show', @post if can? :read, @post %> , 
+<%= link_to 'Back', posts_path %>].join(' | ')
