add can? check to comment destroy link

--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -5,7 +5,7 @@
     <blockquote>
       <%= comment.body %>
     </blockquote>
-    <%= link_to 'Destroy Comment', [comment.post,  comment], :confirm=> 'Are you sure?', :method =>:delete %>
+    <%= link_to 'Destroy Comment', [comment.post,  comment], :confirm=> 'Are you sure?', :method =>:delete if can? :destroy, comment%>
   </p>
 </div>
 
