--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -2,5 +2,9 @@
 <div class="post edit">
   <%= render 'form' %>
 </div>
-[<%= link_to 'Show', @post if can? :read, @post %> , 
-<%= link_to 'Back', posts_path %>].join(' | ')
+
+<% links = []
+links << link_to('Show', @post) if can? :read, @post
+links << link_to('Back', posts_path)
+%>
+<%= raw links.join(' | ') %>
