refine some text

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
         <% end %>
       </span>
 
-      <h1>Road Tang's Site</h1>
+      <a href="/"><h1>Road Tang's Site</h1></a>
       <p class="nav">
         <%= link_to "Home",  root_path %> 
         <%= link_to "GitHub", "https://github.com/roadt"%>
