--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -57,7 +57,10 @@
             }
         }
 
-        p { margin-top: 1em; margin-bottom: 1em;}
+        p { 
+            margin-top: 1em; margin-bottom: 1em;
+            line-height: 2em;
+        }
 
         .body {
         }
