--- a/app/views/layouts/posts.html.erb
+++ b/app/views/layouts/posts.html.erb
@@ -1,7 +1,8 @@
 <% content_for :sidebar do%>
       <div class="sidebar">
         <%= render 'posts/tags' %>
-        <%= render 'posts/tags' %>
+        <%= render 'posts/popular' %>
+        <%= render 'posts/recent_comments' %>
       </div>
 <% end %>
 
