transfer the views file to standard  bootstrap css

--- a/app/views/doorkeeper/applications/index.html.erb
+++ b/app/views/doorkeeper/applications/index.html.erb
@@ -1,11 +1,11 @@
-<div class="span16">
+<div class="span12">
   <header class="page-header">
     <h2>Your applications</h2>
   </header>
 
   <p><%= link_to 'New Application', new_oauth_application_path %></p>
 
-  <table class="zebra-striped">
+  <table class="table zebra-striped">
     <thead>
       <tr>
         <th>Name</th>
