--- a/app/views/doorkeeper/authorized_applications/index.html.erb
+++ b/app/views/doorkeeper/authorized_applications/index.html.erb
@@ -1,9 +1,9 @@
-<div class="span16">
+<div class="span12">
   <header class="page-header">
     <h2>Your authorized applications</h2>
   </header>
 
-  <table class="zebra-striped">
+  <table class="table zebra-striped">
     <thead>
       <tr>
         <th>Application</th>
