--- a/app/assets/stylesheets/oauth.css.less
+++ b/app/assets/stylesheets/oauth.css.less
@@ -62,6 +62,8 @@
 
 
 @import "twitter/bootstrap/responsive-1200px-min.less";
+@import "twitter/bootstrap/responsive-768px-979px.less";
+@import "twitter/bootstrap/responsive-767px-max.less";
 
 .doorkeeper {
     background-color: #FFF;
