add profile feature

--- a/app/views/layouts/posts.html.erb
+++ b/app/views/layouts/posts.html.erb
@@ -16,4 +16,4 @@
       <div class="clearfix"></div>
 <% end %>
 
-<%= render :template=>"layouts/application" %>
+<%= render :template=>"layouts/common" %>
