add profile support and protected profile.json with oauth token

--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -1,1 +1,6 @@
-<%#  to to implemented %>
+<%= simple_form_for @profile do |f| %>
+<%= f.input :email %>
+<%= f.input :sign_in_count %>
+<%= f.input :current_sign_in_at %>
+<%= f.input :last_sign_in_at %>
+<% end %>
