--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -27,6 +27,8 @@
 links << link_to('Back', posts_path)
 links << link_to('Edit', edit_post_path(@post)) if can?(:edit, @post)
 links << link_to('Delete', post_path(@post), :method=>:delete, data: { confirm: "sure?"}) if can?(:edit, @post)
+links << link_to('New', new_post_path)
+
 %>
 <%= raw links.join(' | ') %>
 
